force-app/main/default/objects/Drink_Order__c/Drink_Order__c.object-meta.xml
<CustomObject>
    <label>Drink Order</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Drink Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drink Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>