force-app/main/default/objects/Drink_Order__c/fields/Flavor__c.field-meta.xml
<CustomField>
    <fullName>Flavor__c</fullName>
    <label>Flavor</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lemon</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
            <value>
                <fullName>Tomato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>